# MyInvest

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  alembic.ini  check_analytics.py  check_routes.py  copilot-instructions.md  myinvest.db  pyproject.toml  requirements.txt  test_logging.py  test_quotes_refresh.py  test_router_import.py
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 9791a814c040_initial_schema.py  9bb0d8f46eb6_add_currency_rates_table.py  ad8a3604e110_add_currencies_table.py  d2c3c36d67a7_add_asset_exchange_field.py
app/: config.py  database.py  main.py  models.py  schemas.py
app/routers/: accounts.py  analytics.py  assets.py  coupons.py  currencies.py  import_export.py  pages.py  quotes.py  transactions.py  valuations.py
app/services/: currency_service.py  excel_service.py  export_service.py  import_service.py  market_data.py  portfolio.py  quotes_service.py
app/utils/: formatters.py  logging_util.py
data-xlsx/: data.xlsx
docs/: ARCHITECTURE.md  CODE_STANDARDS.md  DATA_STRUCTURES.md  EXCEL_FORMAT.md
static/css/: style.css
static/js/: app.js
templates/: accounts.html  analytics.html  assets.html  base.html  bonds.html  import.html  import_export.html  index.html  quotes.html  transactions.html
tests/: conftest.py  test_analytics.py  test_import.py  test_models.py  test_portfolio.py
