[project]
name = "myinvest"
version = "0.1.0"
description = "Personal investment tracking web application"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "jinja2>=3.1",
  "python-multipart>=0.0.18",
  "sqlalchemy>=2.0",
  "alembic>=1.14",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "httpx>=0.28",
  "yfinance>=0.2",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]
